# rust_server

./: Cargo.toml  README.md
migrations/: 20230331212735_init.up.sql
src/: main.rs
